fix workspace listing modal overflow

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
@@ -22,6 +22,7 @@
     .filesListing {
       flex-grow: 1;
       outline: 1px solid #707070;
+      overflow-y: auto;
     }
     .tr-header {
         border-bottom-color: #C6C6C6;
@@ -42,6 +43,11 @@
       font-size: 18px;
     }
 
+    .flex-column {
+      height: 100%;
+    }
+
+    /* Matches layout of other data files listings */
     .InfiniteScrollTable.projects-listing {
       th {
         color: #484848;
